# rules_s5

./: BUILD.bazel  MODULE.bazel  readme.md
.github/: renovate.json5
s3/: BUILD.bazel  archive.bzl  requirements.in  requirements_lock.txt  s3_download.py  s5cmd.sh
s3/private/: BUILD.bazel  download.bzl
