"rules_s3"

module(
    name = "rules_s3",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.6.3")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12.11",
)

use_repo(
    python,
    python_3_9 = "python_3_12_11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.12.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")