load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:py_binary.bzl", "py_binary")

# bazelisk run //s3:requirements.update
compile_pip_requirements(
    name = "requirements",
    src = ":requirements.in",
    requirements_txt = ":requirements_lock.txt",
)

py_binary(
  name = "s3_download",
  srcs = ["s3_download.py"],
  deps = [
      "@pypi//boto3",
      "@pypi//fire",
  ]
)